- 이미지 작업 및 코드 정리 중

--- a/assets/02-css/04-cssAdvanced/04-css_flexible_part1.html
+++ b/assets/02-css/04-cssAdvanced/04-css_flexible_part1.html
@@ -60,8 +60,8 @@
 	<section class="mt_xxl indent">
 		<h2 class="ml_mn">Flexbox 속성 요약 설명</h2>
 		<figure class="img_figure mt_ml">
-			<img src="/ukncs/images/css/flexbox/uxkm_flex-base.svg" alt="Flexbox 기본 구조">
-			<figcaption>[Flexbox 기본 구조]</figcaption>
+			<figcaption class="mt_0">[<code class="bg_none t_444">Flexbox</code> 기본 구조]</figcaption>
+			<img src="/ukncs/images/css/flexbox/uxkm_flex-base.svg" alt="Flexbox 기본 구조" class="mt_s">
 		</figure>
 		<div class="ol_lst mt_ml">
 			<ol>
@@ -111,7 +111,7 @@
 			<!--<figcaption class="mt_0">[Flexbox terminology diagram from official W3C specification.]</figcaption>
 			<img src="/ukncs/images/css/flex-direction-terms.svg" alt="Flexbox terminology diagram from official W3C specification." class="mt_m">
 			<img src="/ukncs/images/css/flex-diagram.png" alt="Flexbox terminology diagram from official W3C specification.">-->
-			<figcaption class="mt_0">[Flexbox 용어]</figcaption>
+			<figcaption class="mt_0">[<code class="bg_none t_444">Flexbox</code> 용어]</figcaption>
 			<img src="/ukncs/images/css/flexbox/uxkm_flex_terminology.svg" alt="Flexbox terminology diagram from official W3C specification." class="mt_m">
 		</figure>
 
@@ -125,7 +125,7 @@
 			</ol>
 		</div>
 		<figure class="img_figure indent mt_m">
-			<figcaption class="mt_0">[주 축(main-axis)과 교차 축(cross-axis)]</figcaption>
+			<figcaption class="mt_0">[주 축(<code class="bg_none t_444">main-axis</code>)과 교차 축(<code class="bg_none t_444">cross-axis</code>)]</figcaption>
 			<img src="/ukncs/images/css/flexbox/uxkm_flex-direction-main-axis.svg" alt="주 축(main-axis)과 교차 축(cross-axis)" class="mt_m">
 		</figure>
 
@@ -137,7 +137,7 @@
 			</ol>
 		</div>
 		<figure class="img_figure indent mt_m">
-			<figcaption class="mt_0">[시작점(flex-start)과 끝점(flex-end)]</figcaption>
+			<figcaption class="mt_0">[시작점(<code class="bg_none t_444">flex-start</code>)과 끝점(<code class="bg_none t_444">flex-end</code>)]</figcaption>
 			<img src="/ukncs/images/css/flexbox/uxkm_flex-direction-main(cross)-start.svg" alt="시작점(flex-start)과 끝점(flex-end)" class="mt_m">
 			<!--
 			<img src="/ukncs/images/css/flex-direction-main-start.jpg" alt="시작점(flex-start)과 끝점(flex-end)" class="mt_m">
