--- a/assets/02-css/04-cssAdvanced/05-css_grid_part1.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part1.html
@@ -55,7 +55,7 @@
 			<li><code class="t_blue weight-700 bg_none">grid area</code> : 다수의 <code>grid cell</code>로 이루어진 영역을 뜻합니다. <code>grid area</code>는 항상 사각형의 모양을 가져야합니다. (ㄴ자, ㄱ자 형태 불가능)</li>
 		</ol>
 		<figure class="img_figure mt_m">
-			<figcaption class="mt_0 weight-600"><code class="bg_none t_blue">[ display: grid ]</code></figcaption>
+			<figcaption class="mt_0 weight-600"><code class="bg_none t_444">display: <i class="t_blue">grid</i>;</code></figcaption>
 			<img src="/ukncs/images/css/grid/uxkm_grid.svg" alt="display: grid" class="mt_m"><br>
 			<!--<img src="/ukncs/images/css/grid-concepts.svg" alt="display: grid" class="mt_m max-w650">-->
 		</figure>
@@ -107,7 +107,7 @@
 			</ol>
 
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0 weight-600"><code class="bg_none t_444">[ grid vs flex ]</code></figcaption>
+				<figcaption class="mt_0 weight-600"><code class="bg_none t_444">[ <i class="t_blue">grid</i> vs <i class="t_blue">flex</i> ]</code></figcaption>
 				<!--<img src="/ukncs/images/css/grid_vs_flex.png" alt="grid vs flex" class="mt_m max-w700"><br>-->
 				<!--<img src="/ukncs/images/css/grid/grid_vs_flex2.jpg" alt="grid vs flex" class="mt_m"><br>-->
 				<img src="/ukncs/images/css/grid/uxkm_grid_vs_flex.svg" alt="grid vs flex" class="mt_m">
@@ -420,7 +420,7 @@
 				</div>
 			</section>
 			<figure class="img_figure mt_ml">
-				<figcaption class="mt_0">[ <code class="bg_none t_444">fr(fractional unit)</code> 사용 예시 ]</figcaption>
+				<figcaption class="mt_0">[ <code class="bg_none t_444"><i class="t_blue">fr(fractional unit)</i></code> 사용 예시 ]</figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_fr-units.svg" alt="fr(fractional unit) 사용 예시" class="mt_m">
 			</figure>
 		</article>
@@ -450,7 +450,7 @@
 				</div>
 			</section>
 			<figure class="img_figure mt_ml">
-				<figcaption class="mt_0">[한글을 사용하는 경우 <code class="bg_none t_444">word-break: keep-all;</code>를 설정]</figcaption>
+				<figcaption class="mt_0">[ 한글을 사용하는 경우 <code class="bg_none t_blue">word-break: keep-all;</code>를 설정 ]</figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_min-content.svg" alt="한글을 사용하는 경우 word-break: keep-all;를 설정" class="mt_m">
 			</figure>
 		</article>
@@ -528,7 +528,7 @@
 					</ul>
 				</div>
 				<figure class="img_figure mt_ml">
-					<figcaption class="mt_0">[<code class="bg_none t_444">auto-fill</code> 유/무의 차이]</figcaption>
+					<figcaption class="mt_0">[ <code class="bg_none t_444">auto-fill</code> 유/무의 차이 ]</figcaption>
 					<img src="/ukncs/images/css/grid/uxkm_grid_auto-fill_vs_x.svg" alt="auto-fill 유/무의 차이" class="mt_m">
 				</figure>
 			</section>
@@ -570,7 +570,7 @@
 				</div>
 			</section>
 			<figure class="img_figure mt_ml">
-				<figcaption class="mt_0"><code class="bg_none t_444">[ auto-fill vs auto-fit ]</code></figcaption>
+				<figcaption class="mt_0"><code class="bg_none t_444">[ auto-fill</code>과 <code class="bg_none t_444">auto-fit</code>의 차이 <code class="bg_none t_444">]</code></figcaption>
 				<img src="/ukncs/images/css/grid/uxkm_grid_auto-fill-vs-fill.svg" alt="auto-fill과 auto-fit 비교" class="mt_m">
 			</figure>
 		</article>
