--- a/assets/02-css/04-cssAdvanced/05-css_grid_part4.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part4.html
@@ -91,7 +91,7 @@
 					만약 아이템 배치가 겹쳐지는 상황이 발생하면 <code>z-index</code> 속성 값이 높은 쪽이 위에 배치됩니다.
 				</p>
 				<figure class="img_figure mt_ms">
-					<figcaption class="mt_0">[span을 사용해 상대적으로 영역을 설정]</figcaption>
+					<figcaption class="mt_0">[<code class="bg_none t_444">span</code>을 사용해 상대적으로 영역을 설정]</figcaption>
 					<img src="/ukncs/images/css/grid/uxkm_grid-line-span.svg" alt="span을 사용해 상대적으로 영역을 설정" class="mt_m">
 				</figure>
 
