- 이미지 작업 및 코드 정리 중

--- a/assets/02-css/04-cssAdvanced/04-css_flexible_part3.html
+++ b/assets/02-css/04-cssAdvanced/04-css_flexible_part3.html
@@ -46,13 +46,24 @@
 				</ul>
 			</div>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0">[flex-grow를 시각적으로 설명하는 다이어그램]</figcaption>
+				<figcaption class="mt_0">[<code class="bg_none t_blue">flex-grow</code>를 시각적으로 설명하는 다이어그램]</figcaption>
 				<img src="/ukncs/images/css/flexbox/uxkm_flex-grow.svg" alt="flex-grow를 시각적으로 설명하는 다이어그램" class="mt_m">
 			</figure>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0">[모든 flex item이 동일한 flex-grow 속성값을 가지면 모든 flex item은 동일한 너비를 갖습니다.]</figcaption>
+				<figcaption class="mt_0">
+					[모든
+					<code class="bg_none t_444">flex item</code>이 동일한
+					<code class="bg_none t_blue">flex-grow</code> 속성값을 가지면 모든
+					<code class="bg_none t_444">flex item</code>은 동일한 너비를 갖습니다.]
+				</figcaption>
 				<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-grow-1.svg" alt="flex-grow를 시각적으로 설명하는 다이어그램" class=" mt_s"><br>
-				<figcaption>[두번째 flex item의 flex-grow 속성값을 3으로 지정하면 다른 flex item보다 더 넓은 너비를 갖습니다.]</figcaption>
+
+				<figcaption class="mt_l">
+					[두번째
+					<code class="bg_none t_444">flex item</code>의
+					<code class="bg_none t_blue">flex-grow</code> 속성값을 3으로 지정하면 다른
+					<code class="bg_none t_444">flex item</code>보다 더 넓은 너비를 갖습니다.]
+				</figcaption>
 				<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-grow-2.svg" alt="flex-grow를 시각적으로 설명하는 다이어그램" class="mt_s">
 			</figure>
 			<section class="view_editor edit_code mt_m" data-target="/css/step03/4.4.flexible/4.4.2.flexible-flex-grow.html">
@@ -98,7 +109,11 @@
 			</div>
 
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0">[기본은 flex container의 너비에 마춰 축소 / 특정 flex item만 해제(flex-shrink: 0;)하면 원래 너비 유지]</figcaption>
+				<figcaption class="mt_0">
+					[기본은
+					<code class="bg_none t_444">flex container</code>의 너비에 마춰 축소 /
+					특정 <code class="bg_none t_444">flex item</code>만 해제(<code class="bg_none t_blue">flex-shrink: 0;</code>)하면 원래 너비 유지]
+				</figcaption>
 				<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-shrink.svg" alt="기본은 flex container의 너비에 마춰 축소 / 특정 flex item만 해제(flex-shrink: 0;)하면 원래 너비 유지" class=" mt_s">
 			</figure>
 
@@ -124,7 +139,7 @@
 				두 번째 <code>flex Item</code>은 90px의 1/5인 18px 만큼 너비가 감소합니다.
 			</p>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0">[flex-shrink]</figcaption>
+				<figcaption class="mt_0"><code class="bg_none t_444">[ flex-shrink ]</code></figcaption>
 				<img src="/ukncs/images/css/flexbox/uxkm_flex-shrink_pc.svg" alt="flex-shrink" class="mt_s dp_md_pc mg_center">
 				<img src="/ukncs/images/css/flexbox/uxkm_flex-shrink_md.svg" alt="flex-shrink" class="mt_s dp_md mg_center">
 			</figure>
@@ -197,7 +212,7 @@
 				</ul>
 			</div>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0">[flex-basis를 적용한 flex item의 너비]</figcaption>
+				<figcaption class="mt_0">[<code class="bg_none t_blue">flex-basis</code>를 적용한 <code class="bg_none t_444">flex item</code>의 너비]</figcaption>
 				<img src="/ukncs/images/css/flexbox/uxkm_flexbox-flex-basis.svg" alt="flex-basis를 적용한 flex item의 너비" class=" mt_m"><br>
 				<img src="/ukncs/images/css/flexbox/uxkm_flex-basis_pc.svg" alt="flex-basis를 적용한 flex item의 너비" class="mt_xl dp_md_pc mg_center">
 				<img src="/ukncs/images/css/flexbox/uxkm_flex-basis_md.svg" alt="flex-basis를 적용한 flex item의 너비" class="mt_xl dp_md mg_center">
@@ -389,8 +404,8 @@
 			</div>
 
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0">[align-self를 시각적으로 설명하는 다이어그램]</figcaption>
-				<img src="/ukncs/images/css/flexbox/uxkm_flex-align-self.svg" alt="align-self를 시각적으로 설명하는 다이어그램" class=" mt_s">
+				<figcaption class="mt_0">[<code class="bg_none t_blue">align-self</code>를 시각적으로 설명하는 다이어그램]</figcaption>
+				<img src="/ukncs/images/css/flexbox/uxkm_flex-align-self.svg" alt="align-self를 시각적으로 설명하는 다이어그램" class="mt_s">
 			</figure>
 			<!--
 			<figure class="img_figure mt_m">
@@ -459,7 +474,9 @@
 				</ul>
 			</div>
 			<figure class="img_figure mt_m">
-				<figcaption class="mt_0">[flex item의 배치 순서를 지정]</figcaption>
+				<figcaption class="mt_0">
+					[<code class="bg_none t_blue">order</code>를 적용하여 <code class="bg_none t_444">flex item</code>의 배치 순서를 지정]
+				</figcaption>
 				<img src="/ukncs/images/css/flexbox/uxkm_flex-order.svg" alt="flex item의 배치 순서를 지정" class=" mt_s">
 			</figure>
 			<!--
